Created markup for Article page.

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,66 @@
     </header>
 
     <main>
+        <!--ARTICLE PAGE START-->
+        <div class="article">
+            <div class="main-title">
+                <span></span>
+                <h1>новости</h1>
+            </div>
+            <section class="article-holder container _vertical-padding">
+                <h2>ВСТРЕЧАЙТЕ glo!</h2>
+                <div class="article-content clear">
+                    <div class="article-image">
+                        <img src="./images/default-news-2.png" alt="Article image">
+                    </div>
+                    <p>Представляем glo - революционную технологию нагревания табака.
+
+                        В устройстве glo табак нагревается, а не горит. Это приводит к уменьшению
+                        количества токсичных веществ* и запаха*, не создавая пепла.
+                        Устройство glo работает исключительно со специальными табачными стиками.
+
+                        glo дает вам возможность получить новые ощущения от употребления табака**.
+                        Пользоваться glo просто и интуитивно понятно: одно устройство с одной кнопкой
+                        управления.
+
+                        glo - технология нагревания табака нового поколения.
+
+                        СПРОЕКТИРОВАНО И СОЗДАНО
+                        ДЛЯ ВАШЕГО УДОБСТВА
+
+                        Инженеры мирового уровня собрались вместе и разработали принципиально новый*
+                        способ употребления табака, который, как нам кажется, придется вам по вкусу.
+
+                        Стартовый набор glo удобно держать в руке и легко использовать.
+                        Устройство сопровождает вас в любой ситуации, и где бы вы ни были,
+                        оно всегда дает возможность легко и ненавязчиво ощутить вкус нагретого табака.
+
+                        * В линейке продукции British American Tobacco group.
+                        СПРОЕКТИРОВАНО И СОЗДАНО
+                        ДЛЯ ВАШЕГО УДОБСТВА
+
+                        Инженеры мирового уровня собрались вместе и разработали принципиально новый* способ употребления табака, который, как нам кажется, придется вам по вкусу.
+
+                        Стартовый набор glo удобно держать в руке и легко использовать. Устройство сопровождает вас в любой ситуации, и где бы вы ни были, оно всегда дает возможность
+                        легко и ненавязчиво ощутить вкус нагретого табака.
+
+                        * В линейке продукции British American Tobacco group.
+
+                        КАК ЭТО РАБОТАЕТ
+                        Большинство сигарет горит при температуре 900 °C, но табачные стики нагреваются до 240 °C.
+                        Нагретый табак, в отличие от горящего, высвобождает максимум вкуса, минимизируя количество токсичных веществ, смол и запаха.
+
+                        В нагретом табаке содержится примерно на 90% меньше токсичных веществ по сравнению с сигаретным дымом*.
+
+                        * Сравнение дыма от горящего табака в стандартной сигарете формата 3R4F (примерно 9 мг смол) и пара от нагретого табака в устройстве glo
+                        проводится по 9 типам вредных веществ, употребление которых Всемирная Организация Здравоохранения рекомендует сократить.
+                        Это необязательно означает, что данный продукт менее вреден, чем другие табачные изделия.
+                    </p>
+                </div>
+            </section>
+
+        </div>
+        <!--ARTICLE PAGE END-->
 
         <!--HOME PAGE START-->
         <div class="home active-page">
@@ -55,11 +115,11 @@
                 </div>
             </div>
             <hr>
-            <div class="home-news-holder">
+            <section class="home-news-holder">
                 <div class="news-left-column">
 
                     <!--NEWS ITEM START(1 image)-->
-                    <div class="news-item">
+                    <article class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-1.png" alt="Our news">
                         </div>
@@ -76,10 +136,10 @@
                                 maxime nisi nostrum quis suscipit totam, vel vero voluptatibus! </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
+                    </article>
                     <!--NEWS ITEM END-->
 
-                    <div class="news-item">
+                    <article class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-1.png" alt="Our news">
                         </div>
@@ -90,8 +150,8 @@
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
-                    <div class="news-item">
+                    </article>
+                    <article class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-1.png" alt="Our news">
                         </div>
@@ -102,14 +162,14 @@
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
+                    </article>
 
                 </div>
 
                 <div class="news-right-column">
 
                     <!--NEWS ITEM START(2 image)-->
-                    <div class="news-item">
+                    <article class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-2.png" alt="Our news">
                         </div>
@@ -120,10 +180,10 @@
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
+                    </article>
                     <!--NEWS ITEM START(2 image)-->
 
-                    <div class="news-item">
+                    <article class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-2.png" alt="Our news">
                         </div>
@@ -134,8 +194,8 @@
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
-                    <div class="news-item">
+                    </article>
+                    <article class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-2.png" alt="Our news">
                         </div>
@@ -146,8 +206,8 @@
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
-                    <div class="news-item">
+                    </article>
+                    <article class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-2.png" alt="Our news">
                         </div>
@@ -158,11 +218,11 @@
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
+                    </article>
                 </div>
-            </div>
+            </section>
             <hr>
-            <div class="home-contact-holder">
+            <section class="home-contact-holder">
                 <h2>Как с нами связаться?</h2>
 
                 <!--CONTACT FORM START-->
@@ -185,7 +245,7 @@
                 </div>
                 <!--CONTACT FORM END-->
 
-            </div>
+            </section>
         </div>
         <!--HOME PAGE END-->
 
@@ -250,7 +310,7 @@
                 <div class="green-background">
                     <div class="news-left clear">
                     <!--NEWS ITEM FLOAT START(1 image)-->
-                    <div class="news-item _float _big">
+                    <article class="news-item _float _big">
                         <div class="news-description">
                             <div class="news-image">
                                 <img src="./images/default-news-1.png" alt="Our news">
@@ -268,13 +328,13 @@
                                 totam, vel vero voluptatibus! </p>
                         </div>
                         <a href="#">Читать далее...</a>
-                    </div>
+                    </article>
                     <!--NEWS ITEM FLOAT END-->
                 </div>
                 </div>
                 <div class="news-right">
                     <!--NEWS ITEM START BIG(2 image)-->
-                    <div class="news-item _big">
+                    <article class="news-item _big">
                         <div class="news-image _big">
                             <img src="./images/default-news-2.png" alt="Our news">
                         </div>
@@ -286,7 +346,7 @@
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
-                    </div>
+                    </article>
                     <!--NEWS ITEM END BIG(2 image)-->
                 </div>
             </div>
