Created markup for About Us page.

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <ul onclick="onShowPagePressed(event)">
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">Новости</a></li>
-                    <li><a href="#" style="pointer-events: none;">Контакты</a></li>
+                    <li><a href="#">О нас</a></li>
                     <li><a href="#">Партнеры</a></li>
                     <li><a href="#" style="pointer-events: none;">Сотрудничество</a></li>
                 </ul>
@@ -76,21 +76,27 @@
                         СПРОЕКТИРОВАНО И СОЗДАНО
                         ДЛЯ ВАШЕГО УДОБСТВА
 
-                        Инженеры мирового уровня собрались вместе и разработали принципиально новый* способ употребления табака, который, как нам кажется, придется вам по вкусу.
+                        Инженеры мирового уровня собрались вместе и разработали принципиально новый* способ употребления
+                        табака, который, как нам кажется, придется вам по вкусу.
 
-                        Стартовый набор glo удобно держать в руке и легко использовать. Устройство сопровождает вас в любой ситуации, и где бы вы ни были, оно всегда дает возможность
+                        Стартовый набор glo удобно держать в руке и легко использовать. Устройство сопровождает вас в
+                        любой ситуации, и где бы вы ни были, оно всегда дает возможность
                         легко и ненавязчиво ощутить вкус нагретого табака.
 
                         * В линейке продукции British American Tobacco group.
 
                         КАК ЭТО РАБОТАЕТ
                         Большинство сигарет горит при температуре 900 °C, но табачные стики нагреваются до 240 °C.
-                        Нагретый табак, в отличие от горящего, высвобождает максимум вкуса, минимизируя количество токсичных веществ, смол и запаха.
+                        Нагретый табак, в отличие от горящего, высвобождает максимум вкуса, минимизируя количество
+                        токсичных веществ, смол и запаха.
 
-                        В нагретом табаке содержится примерно на 90% меньше токсичных веществ по сравнению с сигаретным дымом*.
+                        В нагретом табаке содержится примерно на 90% меньше токсичных веществ по сравнению с сигаретным
+                        дымом*.
 
-                        * Сравнение дыма от горящего табака в стандартной сигарете формата 3R4F (примерно 9 мг смол) и пара от нагретого табака в устройстве glo
-                        проводится по 9 типам вредных веществ, употребление которых Всемирная Организация Здравоохранения рекомендует сократить.
+                        * Сравнение дыма от горящего табака в стандартной сигарете формата 3R4F (примерно 9 мг смол) и
+                        пара от нагретого табака в устройстве glo
+                        проводится по 9 типам вредных веществ, употребление которых Всемирная Организация
+                        Здравоохранения рекомендует сократить.
                         Это необязательно означает, что данный продукт менее вреден, чем другие табачные изделия.
                     </p>
                 </div>
@@ -98,6 +104,69 @@
 
         </div>
         <!--ARTICLE PAGE END-->
+
+        <!--ABOUT US PAGE START-->
+        <div class="about">
+            <div class="main-title">
+                <span></span>
+                <h1>о нас</h1>
+            </div>
+            <div class="about-content container _vertical-padding">
+                <section class="about-section">
+                    <div class="about-logo">
+                        <img src="./images/logo-footer.png" alt="Alva logo">
+                    </div>
+                    <div class="about-description">
+                        <h3>Кто мы?</h3>
+                        <p>
+                            Мы команда, которая вдохновилась идеей “оживить”
+                            сухие изображения в печатных изданиях и рекламе.
+                        </p>
+                    </div>
+                </section>
+                <section class="about-description">
+                    <h3>Наша миссия?</h3>
+                    <p>
+                        Своей задачей мы определили внедрить AR-технологии в печатную продукцию:
+                        расширить возможности журналов и книг, добавить магии на страницы ваших
+                        любимых изданий, а рекламу преподносить интересно, ненавязчиво и направленно.
+                        Мы устали от сухих изображений! Наша команда видит в будущем концептуально
+                        новый подход к привычному процессу листания журнала и книги!
+                    </p>
+                </section>
+                <section class="about-description">
+                    <h3>Почему мы?</h3>
+                    <p>
+                        Это же очевидно! Каждый из нашей компании верит в то, что у бумаги нет границ.
+                        Этот современный подход отлично дополнит и расширит возможности каждой
+                        напечатанной страницы!
+                    </p>
+                </section>
+                <section class="about-contacts">
+                    <h2>Контакты</h2>
+                    <div class="about-contacts-section">
+
+                        <div class="about-social _email">
+                            <span></span>
+                            <a href="mailto:info@alva.com">info@alva.com</a>
+                        </div>
+                        <div class="about-social _fb">
+                            <span></span>
+                            <a href="#" target="_blank" rel="noopener">@alvareality</a>
+                        </div>
+                        <div class="about-social _tel">
+                            <span></span>
+                            <a href="tel:+380969369756">0969369756</a>
+                        </div>
+                        <div class="about-social _insta">
+                            <span></span>
+                            <a href="#" target="_blank" rel="noopener">@alvareality</a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <!--ABOUT US PAGE END-->
 
         <!--HOME PAGE START-->
         <div class="home active-page">
@@ -309,28 +378,36 @@
             <div class="news-content">
                 <div class="green-background">
                     <div class="news-left clear">
-                    <!--NEWS ITEM FLOAT START(1 image)-->
-                    <article class="news-item _float _big">
-                        <div class="news-description">
-                            <div class="news-image">
-                                <img src="./images/default-news-1.png" alt="Our news">
+                        <!--NEWS ITEM FLOAT START(1 image)-->
+                        <article class="news-item _float _big">
+                            <div class="news-description">
+                                <div class="news-image">
+                                    <img src="./images/default-news-1.png" alt="Our news">
+                                </div>
+                                <h3><a href="#">новости</a></h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commodi
+                                    culpa
+                                    cupiditate distinctio dolore dolores ducimus labore maxime natus non quam quasi,
+                                    quidem
+                                    sapiente similique tempore temporibus, totam voluptates! Cumque cupiditate
+                                    excepturi,
+                                    exercitationem impedit iste qui quos, repudiandae sapiente unde veniam, vero
+                                    voluptatibus?
+                                    Adipisci alias animi, at culpa enim eos eum inventore ipsa, libero maiores maxime
+                                    minus nam
+                                    natus nesciunt nisi obcaecati officiis quaerat quibusdam quis quo reiciendis tempora
+                                    velit
+                                    voluptatum. Consequuntur culpa debitis error odio perferendis ratione repellat
+                                    repudiandae
+                                    tenetur. Atque autem enim explicabo fugiat harum magnam maxime nisi nostrum quis
+                                    suscipit
+                                    totam, vel vero voluptatibus! </p>
                             </div>
-                            <h3><a href="#">новости</a></h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commodi culpa
-                                cupiditate distinctio dolore dolores ducimus labore maxime natus non quam quasi, quidem
-                                sapiente similique tempore temporibus, totam voluptates! Cumque cupiditate excepturi,
-                                exercitationem impedit iste qui quos, repudiandae sapiente unde veniam, vero voluptatibus?
-                                Adipisci alias animi, at culpa enim eos eum inventore ipsa, libero maiores maxime minus nam
-                                natus nesciunt nisi obcaecati officiis quaerat quibusdam quis quo reiciendis tempora velit
-                                voluptatum. Consequuntur culpa debitis error odio perferendis ratione repellat repudiandae
-                                tenetur. Atque autem enim explicabo fugiat harum magnam maxime nisi nostrum quis suscipit
-                                totam, vel vero voluptatibus! </p>
-                        </div>
-                        <a href="#">Читать далее...</a>
-                    </article>
-                    <!--NEWS ITEM FLOAT END-->
-                </div>
+                            <a href="#">Читать далее...</a>
+                        </article>
+                        <!--NEWS ITEM FLOAT END-->
+                    </div>
                 </div>
                 <div class="news-right">
                     <!--NEWS ITEM START BIG(2 image)-->
