Created markup for Cooperation page.

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#">Новости</a></li>
                     <li><a href="#">О нас</a></li>
                     <li><a href="#">Партнеры</a></li>
-                    <li><a href="#" style="pointer-events: none;">Сотрудничество</a></li>
+                    <li><a href="#">Сотрудничество</a></li>
                 </ul>
             </nav>
         </div>
@@ -368,6 +368,76 @@
             </div>
         </div>
         <!--PARTNERS END-->
+
+        <!--COOPERATION START-->
+        <div class="cooperation">
+            <div class="main-title">
+                <span></span>
+                <h1>сотрудничество</h1>
+            </div>
+            <h2>Наши преимущества</h2>
+            <section class="cooperation-content">
+                <div class="cooperation-item">
+                    <h3>ALVA Arjour</h3>
+                    <h4>На странице больше</h4>
+                    <h4>чем ты думаешь</h4>
+                    <p>Мы все привыкли видеть в журналах сухие картинки и текст. Теперь, благодаря нашему сервису,
+                        журнал оживет, а его содержимое выйдет за привычные нам рамки.</p>
+                </div>
+                <div class="cooperation-item">
+                    <h3>ALVA Promotion</h3>
+                    <h4>Привлекай внимание</h4>
+                    <h4>по-новому</h4>
+                    <p>Сейчас нас окружают приевшиеся рекламные листовки, плакаты, буклеты, которыми никого не удивишь.
+                        Благодаря нам, ваша рекламная продукция покажет, что вы всегда на шаг впереди.</p>
+                </div>
+                <div class="cooperation-item">
+                    <h3>ALVA Learning</h3>
+                    <h4>Обучение по-новому</h4>
+                    <h4>по-новому</h4>
+                    <p>Как правило, учебные издания не всегда могут доступно раскрыть тему предмета.
+                        С нами изложение материала станет прогрессивнее, интереснее и понятнее.</p>
+                </div>
+                <div class="cooperation-item">
+                    <h3>ALVA Packs</h3>
+                    <h4>Упаковка будущего</h4>
+                    <h4>уже здесь</h4>
+                    <p>Хватит использовать однообразные обертки для подарков! Сейчас упаковки отличаются
+                        только цветом и дизайном, а наш сервис сделает их уникальными.</p>
+                </div>
+                <div class="cooperation-item">
+                    <h3>ALVA Atributes</h3>
+                    <h4>Дополни то, что </h4>
+                    <h4>тебе по душе</h4>
+                    <p>Будущее уже здесь! У тебя есть идея, как тот или иной предмет сделать уникальным? Поделись с нами,
+                        и мы воплотим ее для тебя в жизнь.</p>
+                </div>
+            </section>
+            <section class="cooperation-form">
+                <h3 class="subtitle">Свяжитесь с нами!</h3>
+                <!--CONTACT FORM START-->
+                <div class="contact-form-wrap">
+                    <form action="#">
+                        <div class="contact-form-content">
+                            <div class="contact-form-left">
+                                <input type="text" placeholder="Введите ваше имя" required>
+                                <input type="tel" placeholder="Введите ваш номер телефона">
+                                <input type="email" placeholder="Введите ваш email" required>
+                            </div>
+                            <div class="contact-form-right">
+                                <textarea placeholder="Ваше сообщение"></textarea>
+                            </div>
+                        </div>
+                        <div class="contact-form-submit">
+                            <button type="submit">Отправить</button>
+                        </div>
+                    </form>
+                </div>
+                <!--CONTACT FORM END-->
+
+            </section>
+        </div>
+        <!--COOPERATION END-->
 
         <!--NEWS PAGE START-->
         <div class="news">
