1. Markup and styles fixes. 2. Header for Article page markup added

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,25 @@
     </header>
     <!--HEADER END-->
 
+    <!--HEADER FOR ARTICLE START-->
+    <header>
+        <div class="header-holder">
+            <button class="header-back-btn">
+                <i class="fa fa-arrow-left fa-2x"></i>
+            </button>
+            <div class="header-logo">
+                <a href="#">
+                    <img src="./images/logo.png" alt="Logo">
+                </a>
+            </div>
+
+        </div>
+        <div class="top-banner">
+            <h3>Мы расширяем границы того, что вас окружает!</h3>
+        </div>
+    </header>
+    <!--HEADER FOR ARTICLE END-->
+
     <main>
 
         <!--HOME PAGE START-->
