--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alva</title>
     <link href="./css/main.css" rel="stylesheet"/>
-    <link href="./css/main.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
@@ -42,29 +41,10 @@
     </header>
     <!--HEADER END-->
 
-    <!--HEADER FOR ARTICLE START-->
-    <header>
-        <div class="header-holder">
-            <button class="header-back-btn">
-                <i class="fa fa-arrow-left fa-2x"></i>
-            </button>
-            <div class="header-logo">
-                <a href="#">
-                    <img src="./images/logo.png" alt="Logo">
-                </a>
-            </div>
-
-        </div>
-        <div class="top-banner">
-            <h3>Мы расширяем границы того, что вас окружает!</h3>
-        </div>
-    </header>
-    <!--HEADER FOR ARTICLE END-->
-
     <main>
 
         <!--HOME PAGE START-->
-        <div class="home">
+        <div class="home active-page">
             <div class="home-qr-holder">
                 <div class="qr-left-column">
                     <span></span>
