Styles updates according to new requires. About us and Cooperation pages.

--- a/src/index.html
+++ b/src/index.html
@@ -334,30 +334,43 @@
                         <img src="./images/logo-footer.png" alt="Alva logo">
                     </div>
                     <div class="about-description">
-                        <h3>Кто мы?</h3>
-                        <p>
-                            Мы команда, которая вдохновилась идеей “оживить”
-                            сухие изображения в печатных изданиях и рекламе.
-                        </p>
+                        <div class="light-chat-bubble">
+                            <p>Кто вы?</p>
+                        </div>
+                        <div class="dark-chat-bubble">
+                            <p>
+                                Мы команда, которая вдохновилась идеей “оживить”
+                                сухие изображения в печатных изданиях и рекламе.
+                            </p>
+                        </div>
                     </div>
                 </section>
                 <section class="about-description">
-                    <h3>Наша миссия?</h3>
-                    <p>
-                        Своей задачей мы определили внедрить AR-технологии в печатную продукцию:
-                        расширить возможности журналов и книг, добавить магии на страницы ваших
-                        любимых изданий, а рекламу преподносить интересно, ненавязчиво и направленно.
-                        Мы устали от сухих изображений! Наша команда видит в будущем концептуально
-                        новый подход к привычному процессу листания журнала и книги!
-                    </p>
+                    <div class="light-chat-bubble">
+                        <p>Ваша миссия?</p>
+                    </div>
+                    <div class="dark-chat-bubble">
+                        <p>
+                            Своей задачей мы определили внедрить AR-технологии в печатную продукцию:
+                            расширить возможности журналов и книг, добавить магии на страницы ваших
+                            любимых изданий, а рекламу преподносить интересно, ненавязчиво и направленно.
+                            Мы устали от сухих изображений! Наша команда видит в будущем концептуально
+                            новый подход к привычному процессу листания журнала и книги!
+                        </p>
+                    </div>
+
                 </section>
                 <section class="about-description">
-                    <h3>Почему мы?</h3>
-                    <p>
-                        Это же очевидно! Каждый из нашей компании верит в то, что у бумаги нет границ.
-                        Этот современный подход отлично дополнит и расширит возможности каждой
-                        напечатанной страницы!
-                    </p>
+                    <div class="light-chat-bubble">
+                        <p>Почему вы?</p>
+                    </div>
+                    <div class="dark-chat-bubble">
+                        <p>
+                            Это же очевидно! Каждый из нашей компании верит в то, что у бумаги нет границ.
+                            Этот современный подход отлично дополнит и расширит возможности каждой
+                            напечатанной страницы!
+                        </p>
+                    </div>
                 </section>
                 <section class="about-contacts">
                     <h2>Контакты</h2>
